--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
+*{box-sizing: border-box;}
+
 .container {
+  max-width: 1920px;
   line-height: 1.5;
-  margin: 0 4vw;
+  margin: auto;
   font-size: 1.25em;
   scroll-behavior: smooth;
   background-color: rgba(254, 249, 225, 1);
@@ -9,10 +12,10 @@
 }
 
 .bg{
-    background-color: rgba(229, 208, 172, 0.99);
+    background-color: rgba(229, 208, 172, 0.98);
     padding: 4vw;
     border-radius: 2em;
-    margin: 2em 0;
+    margin: 2em 4vw;
 }
 
 .header {
@@ -105,7 +108,12 @@ section,
   border: 2px solid black;
   border-radius: 2em;
   padding: 1em;
-  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 1px 50px 0px rgba(0, 0, 0, 0.75);
+  background-color: rgba(249, 226, 186, 0.98);
+}
+
+.cenik a:nth-child(1){
+  text-align: right;
 }
 
 .nadpis-barber,
@@ -152,10 +160,28 @@ section,
   border-bottom: 1px solid black;
 }
 
+.cenik a{ /*BUTTONY V CENIKU*/
+  display: inline-block;
+  padding: 0.5em 1em;
+  margin: 1em 0;
+  text-decoration: none;
+  color: black;
+  background-color: rgba(229, 208, 172, 0.99);
+  border: 2px solid black;
+  border-radius: 1em;
+  transition: background-color 0.75s ease, color 0.75s ease;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  font-weight: bold;
+}
+
+.cenik a:hover{
+  background-color: black;
+  color: white;
+}
+
 /*KONTAKT*/
 
 .footer {
-  outline: 1px solid red;
   display: flex;
 }
 
@@ -164,7 +190,7 @@ section,
 }
 
 .footer .footer-prava-cast {
-  flex: 1;
+  flex: 1.5;
   overflow: hidden;
 }
 
@@ -177,6 +203,7 @@ section,
 .mapa {
   width: 100%;
   height: 100%;
+  border-radius: 1em;
 }
 
 .icon {
@@ -188,7 +215,12 @@ section,
   display: flex;
   flex-direction: column;
   gap: 1em;
-  padding: 1em;
+  padding: 1em 0;
+  width: fit-content;
+}
+
+.icons-flexbox a{
+  width: 10px;
 }
 
 .icons-flexbox {
@@ -196,4 +228,8 @@ section,
   gap: 1em;
   flex-direction: row;
   align-items: center;
+}
+
+.oteviraci-doba-hodiny p{
+  padding: 0.5em 1em;
 }
