--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-*{box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
 .container {
   max-width: 1920px;
@@ -11,11 +13,11 @@
   font-family: "Montserrat", serif;
 }
 
-.bg{
-    background-color: rgba(229, 208, 172, 0.98);
-    padding: 4vw;
-    border-radius: 2em;
-    margin: 2em 4vw;
+.bg {
+  background-color: rgba(229, 208, 172, 0.98);
+  padding: 4vw;
+  border-radius: 2em;
+  margin: 2em 4vw;
 }
 
 .header {
@@ -45,7 +47,7 @@
   font-family: "Playfair Display", serif;
 }
 
-.header-prava-strana .nav li a{
+.header-prava-strana .nav li a {
   text-decoration: none;
   font-size: 1.25em;
   color: black;
@@ -53,7 +55,7 @@
   transition: color 0.75s ease, text-shadow 1s ease;
 }
 
-.header-prava-strana .nav li a:hover{
+.header-prava-strana .nav li a:hover {
   color: white;
   text-shadow: 2px 2px 2px black;
 }
@@ -112,7 +114,7 @@ section,
   background-color: rgba(249, 226, 186, 0.98);
 }
 
-.cenik a:nth-child(1){
+.cenik a:nth-child(1) {
   text-align: right;
 }
 
@@ -160,7 +162,8 @@ section,
   border-bottom: 1px solid black;
 }
 
-.cenik a{ /*BUTTONY V CENIKU*/
+.cenik a {
+  /*BUTTONY V CENIKU*/
   display: inline-block;
   padding: 0.5em 1em;
   margin: 1em 0;
@@ -170,13 +173,17 @@ section,
   border: 2px solid black;
   border-radius: 1em;
   transition: background-color 0.75s ease, color 0.75s ease;
-  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
   font-weight: bold;
 }
 
-.cenik a:hover{
+.cenik a:hover {
   background-color: black;
   color: white;
+}
+
+.button-align {
+  text-align: right;
+  padding-right: 2em;
 }
 
 /*KONTAKT*/
@@ -219,7 +226,7 @@ section,
   width: fit-content;
 }
 
-.icons-flexbox a{
+.icons-flexbox a {
   width: 10px;
 }
 
@@ -230,6 +237,6 @@ section,
   align-items: center;
 }
 
-.oteviraci-doba-hodiny p{
+.oteviraci-doba-hodiny p {
   padding: 0.5em 1em;
 }
