--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .container {
   max-width: 1920px;
   line-height: 1.5;
@@ -49,15 +53,10 @@
 
 .header-prava-strana .nav li a {
   text-decoration: none;
-  font-size: 1.25em;
+  font-size: 1.5em;
   color: black;
   font-weight: bold;
-  transition: color 0.75s ease, text-shadow 1s ease;
-}
-
-.header-prava-strana .nav li a:hover {
-  color: white;
-  text-shadow: 2px 2px 2px black;
+  border-bottom: 2px solid black;
 }
 
 .nav-logo {
@@ -79,6 +78,7 @@ section,
   display: flex;
   gap: 2em;
   align-items: center;
+  padding: 5em 0;
 }
 
 .popis .popis-text .popis-text-leva-strana {
@@ -112,6 +112,7 @@ section,
   padding: 1em;
   box-shadow: 2px 1px 50px 0px rgba(0, 0, 0, 0.75);
   background-color: rgba(249, 226, 186, 0.98);
+  margin-bottom: 5em;
 }
 
 .cenik a:nth-child(1) {
@@ -124,6 +125,7 @@ section,
   font-size: 2em;
   font-weight: bold;
   font-family: "Playfair Display", serif;
+  padding-bottom: 0.5em;
 }
 
 .cenik .cenik-barber,
@@ -163,22 +165,14 @@ section,
 }
 
 .cenik a {
-  /*BUTTONY V CENIKU*/
   display: inline-block;
   padding: 0.5em 1em;
   margin: 1em 0;
   text-decoration: none;
   color: black;
-  background-color: rgba(229, 208, 172, 0.99);
   border: 2px solid black;
   border-radius: 1em;
-  transition: background-color 0.75s ease, color 0.75s ease;
   font-weight: bold;
-}
-
-.cenik a:hover {
-  background-color: black;
-  color: white;
 }
 
 .button-align {
@@ -226,10 +220,6 @@ section,
   width: fit-content;
 }
 
-.icons-flexbox a {
-  width: 10px;
-}
-
 .icons-flexbox {
   display: flex;
   gap: 1em;
@@ -237,6 +227,98 @@ section,
   align-items: center;
 }
 
+.kontakt-icons-flex a {
+  text-decoration: none;
+  color: black;
+  font-size: 1em;
+}
+
+.nadpis-icon-flex {
+  display: flex;
+  gap: 1em;
+  align-items: center;
+}
+
 .oteviraci-doba-hodiny p {
-  padding: 0.5em 1em;
+  padding: 0.25em 0;
+}
+
+/*RESPONSIVE*/
+
+@media (max-width: 1550px) {
+  .header-prava-strana .nav {
+    flex-direction: column;
+    gap: 1em;
+    align-items: end;
+  }
+  .header-prava-strana .nav li {
+    text-align: right;
+  }
+  .nadpis-kontakt {
+    padding-right: 1em;
+  }
+  .popis-text {
+    flex-direction: column;
+  }
+  .nadpis-mensi {
+    width: min-content;
+  }
+  .footer {
+    flex-direction: column;
+    gap: 5em;
+  }
+  .obsah-kontakt {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+    justify-content: space-between;
+  }
+  .kontakt-icons-flex {
+    gap: 1em;
+    justify-content: center;
+  }
+  .kontakt-barber,
+  .kontakt-damske-kadernictvi,
+  .oteviraci-doba {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    justify-content: end;
+  }
+  .mapa {
+    width: 100%;
+    height: 50vh;
+  }
+  .popisek-img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+  }
+  .nav-logo {
+    width: 400px;
+    align-self: center;
+  }
+  .header-prava-strana {
+    gap: 1em;
+    justify-content: end;
+    align-items: end;
+  }
+}
+@media (max-width: 850px) {
+  .kontakt-oteviraci-hodiny {
+    display: none;
+  }
+}
+@media (max-width: 525px) {
+  .obsah-kontakt {
+    flex-direction: column;
+  }
+  .nadpis-h2 {
+    padding: 2em 0;
+  }
 }
