--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,11 @@ section,
   align-items: center;
 }
 
+.popis .popis-text .popis-text-prava-strana img {
+  width: 100%;
+  border-radius: 1em;
+}
+
 .nadpis-h1 {
   font-size: 2.5em;
   font-weight: bold;
@@ -326,3 +331,44 @@ section,
     border-radius: 0;
   }
 }
+
+
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+
+.lightbox-img {
+  max-width: 50%;  /* Obrázek nebude širší než kontejner */
+  height: auto;     /* Zachová poměr stran */
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+}
+
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  font-size: 50px;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.prev { left: 20%; }
+.next { right: 20%; }
