--- a/css/styles.css
+++ b/css/styles.css
@@ -248,6 +248,47 @@ section,
   padding: 0.25em 0;
 }
 
+
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  justify-content: center;
+  align-items: center;
+}
+
+
+.lightbox-img {
+  max-width: 40vw;
+  height: auto;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+}
+
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  font-size: 50px;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.prev { left: 8%; }
+.next { right: 8%; }
+
 /*RESPONSIVE*/
 
 @media (max-width: 1550px) {
@@ -299,6 +340,7 @@ section,
   }
 }
 
+
 @media (max-width: 1000px) {
   .header {
     display: flex;
@@ -312,6 +354,9 @@ section,
     gap: 1em;
     justify-content: end;
     align-items: end;
+  }
+  .lightbox-img {
+    max-width: 60vw;
   }
 }
 @media (max-width: 850px) {
@@ -331,44 +376,3 @@ section,
     border-radius: 0;
   }
 }
-
-
-.lightbox {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  justify-content: center;
-  align-items: center;
-}
-
-
-.lightbox-img {
-  max-width: 50%;  /* Obrázek nebude širší než kontejner */
-  height: auto;     /* Zachová poměr stran */
-}
-
-.close {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  font-size: 40px;
-  color: white;
-  cursor: pointer;
-}
-
-.prev, .next {
-  position: absolute;
-  top: 50%;
-  font-size: 50px;
-  color: white;
-  cursor: pointer;
-  padding: 10px;
-}
-
-.prev { left: 20%; }
-.next { right: 20%; }
